--- a/frontend/src/components/css/PlanetSurfaceContent.css
+++ b/frontend/src/components/css/PlanetSurfaceContent.css
@@ -4,4 +4,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  z-index: 10;
+  position: relative;
 }
